# books_to_anki

./: .gitignore  Makefile  book_to_flashcards.py  books-to-anki.code-workspace  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
book_complexity/: __init__.py  book_complexity.py
book_to_flashcards/: __init__.py  book_to_anki.py  book_to_flashcards.py  translation.py
book_to_flashcards/resources/: front_template.html  styling.css  styling.css.jinja
split_sentences/: __init__.py  spacy_wrapper.py  split_sentences.py
src/book_complexity/: ComplexityCalculators.py  __init__.py  book_complexity.py  cli_books_complexity.py
src/book_to_flashcards/: Card.py  Progress.py  __init__.py  book_to_anki.py  book_to_flashcards.py  cards_csv.py  cards_from_csv.py  cards_jsonl.py  cards_to_anki.py  cards_untranslated_from_file.py  cards_untranslated_from_text.py  cli_make_flashcards.py  cli_make_index.py  translate_cards.py
src/book_to_flashcards/resources/: back_template.html  styling.css.jinja
src/book_to_html/: __init__.py  book_to_html.py
src/book_to_html/resources/: book.css.jinja
src/cards_to_html/: __init__.py  cards_to_html.py
src/cards_to_html/resources/: book.css.jinja  book.html.jinja
src/split_sentences/: __init__.py  split_sentences.py
test/: call_book_complexity.py  test_book_complexity.py  test_cli.py  test_index.py  test_make_flashcards.py  test_split_sentences.py
test/data/: short_subset.txt  subset.txt  test.csv  test.jsonl
test/data/dummy_books/: dummy_book.txt  second_dummy_book.txt
test/src/: call_book_complexity.py  call_make_flashcards.py  test_book_complexity.py  test_cli.py  test_make_flashcards.py  test_split_sentences.py
