[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "book_language_tools"
authors = [
    {name = "Ashby Winch", email = "ashby@juggler.net"},
]
description = "Tools for learning languages from books"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'Click',
    'spacy',
    'deepl',
    'unicodecsv',
    'genanki',
    'jinja2',
    'alive-progress',
    'importlib_resources',
    'tabulate'
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
book-to-flashcards = "book_to_flashcards.book_to_flashcards:cli_make_flashcard_csv"
books-to-anki = "book_to_flashcards.book_to_anki:cli_books_to_anki"
book-complexity = "book_complexity.book_complexity:cli_book_complexity"
books-complexity = "book_complexity.book_complexity:cli_books_complexity"
book-to-sidebyside = "book_to_html.book_to_html:cli_make_book_html"