[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "book_language_tools"
authors = [
    {name = "Ashby Winch", email = "ashby@juggler.net"},
]
description = "Tools for learning languages from books"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'Click',
    'spacy',
    'deepl',
    'unicodecsv',
    'genanki',
    'jinja2',
    'alive-progress',
    'importlib_resources',
    'tabulate',
    'orjsonl'
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/"]

[tool.pytest.ini_options]
addopts = "--testmon"
testpaths = [ "test/src" ]


[project.scripts]
book-to-flashcard = "book_to_flashcards.cli_make_flashcards:cli_make_flashcards"
book-complexity = "book_complexity.cli_book_complexity:cli_book_complexity"
books-complexity = "book_complexity.cli_book_complexity:cli_books_complexity"