[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "book_language_tools"
authors = [
    {name = "Ashby Winch", email = "ashby@juggler.net"},
]
description = "Tools for learning languages from books"
readme = "README.md"
requires-python = "==3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'Click',
    'spacy',
    'deepl',
    'unicodecsv',
    'genanki',
    'jinja2',
    'alive-progress',
    'importlib_resources',
    'tabulate',
    'orjsonl'
]
dynamic = ["version"]

[tool.uv]
dev-dependencies= [
    "ruff",
	"mypy",
    "types-tabulate",
	"pytest-testmon",
	"parameterized",
	"line_profiler",
	"pytest",
	"pytest-cov",
    "pyfakefs",
	"build",
    "ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.0/ru_core_news_sm-3.7.0-py3-none-any.whl",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
]
override-dependencies = [
    "numpy==1.24.0"
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/"]

[tool.pytest.ini_options]
addopts = "--testmon"
testpaths = [ "test/src" ]


[project.scripts]
book-to-flashcard = "book_to_flashcards.cli_make_flashcards:cli_make_flashcards"
book-complexity = "book_complexity.cli_book_complexity:cli_book_complexity"
books-complexity = "book_complexity.cli_book_complexity:cli_books_complexity"